// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applies element style properties 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -15px;
  margin-right: -15px;
  padding: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

<div
  className="c0 twbs-grid-row"
>
  <p>
    child
  </p>
</div>
`;

exports[`Default row 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -15px;
  margin-right: -15px;
}

<div
  className="c0 twbs-grid-row"
>
  <p>
    child
  </p>
</div>
`;

exports[`No gutters 1`] = `
.c2 {
  width: 100%;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
  max-width: 100%;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0;
  margin-right: 0;
}

.c0 > .c1 {
  padding-left: 0;
  padding-right: 0;
}

<div
  className="c0 twbs-grid-row"
>
  <div
    className="c1 c2 twbs-grid-col"
  >
    <p>
      child
    </p>
  </div>
</div>
`;
